BankMore/k8s/tarifas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarifas
  namespace: banco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarifas
  template:
    metadata:
      labels:
        app: tarifas
    spec:
      containers:
        - name: tarifas
          image: mj2rsdockerpass/tarifas:v1
          ports:
            - containerPort: 80
