BankMore/k8s/transferencia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transferencia
  namespace: banco
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transferencia
  template:
    metadata:
      labels:
        app: transferencia
    spec:
      containers:
        - name: transferencia
          image: mj2rsdockerpass/transferencia:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
