BankMore/k8s/conta-corrente-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conta-corrente-service
spec:
  selector:
    app: conta-corrente
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
