BankMore/k8s/transferencia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transferencia-service
  namespace: banco
spec:
  selector:
    app: transferencia
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
